Mon Apr 16 14:43:56 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2702_Regression/run_test.pl:
          Try to get this working for vxworks

        * tests/DIOP/run_test.pl:
          Fix for VxWorks testing

Mon Apr 16 13:05:59 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/CSD_Strategy_Tests/TP_Test_3/run_test.pl:

          If a client fails, start wrapping up the test instead of waiting a
          minute for each client to finish.  Otherwise, it could take quite
          a long time for the test to finish if all the clients are timing
          out.

Mon Apr 16 13:01:00 UTC 2007 Simon Massey  <sma@prismtech.com>

        * tao_idl/be/be_visitor_constant/constant_cs.cpp:

          Add CORBA complient storeage emmition even when class
          static const int are declared inline in the header class.
          This fixes a CORBA non-complience however it uncovered
          some platforms (noteably Microsoft) where the compiler
          was non- C++ complient in that it always provides storeage
          for such constants at the point they are seen at the
          declaration (in the header). The standard C++ states that
          if storage is required (and it doesn't have to be) it should
          be defined (i.e. allocated) in the definition (i.e. the
          .cpp file as well as declared in the header).

Mon Apr 16 12:04:56 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DIOP/run_test.pl:
          Updated for VxWorks cross host testing

        * tests/Persistent_ID/run_test.pl:
          Use PerlACE::LocalFile

        * tests/OctetSeq/run_test.pl:
          Run the performance test on the target system when using
          VxWorks cross host testing

        * tests/Abstract_Interface/client.cpp:
          No need to pass in an empty orb name

Mon Apr 16 11:47:56 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Collocation_Exception_Test/run_test.pl: